# aklapper

./: .dockerignore  .gcloudignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.database.yaml  docker-compose.yaml  eslint.config.js  eslint.config.ts  go.work  go.work.sum  jest.preset.cjs  jest.preset.js  jest.preset.ts  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  website.yaml
.github/workflows/: ci.yml
apps/wdg-agents/: .coverage  .flake8  README.md  project.json  pyproject.toml
apps/wdg-agents/apps/: .coverage
apps/wdg-agents/apps/wdg_agents/: agent_1.py  api.py  chroma_client.py  get_llm_list.py  hello.py  rag_chain.py  state.py
apps/wdg-agents/chroma_db_ollama/: chroma.sqlite3
apps/wdg-agents/data_store/: chroma.sqlite3
apps/wdg-agents/tests/: test_hello.py
libs/chain/: README.md  esbuild.config.cjs  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  tsconfig.spec.json  vite.config.ts  vitest.config.ts
libs/game/: esbuild.config.cjs  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  tsconfig.spec.json  vite.config.ts  vitest.config.ts
libs/games-chains/: README.md  esbuild.config.cjs  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  tsconfig.spec.json  tsconfig.spec.tsbuildinfo  vite.config.ts  vitest.config.ts
libs/games-components/: README.md  esbuild.config.cjs  jest.config.d.ts.map  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.lib.tsbuildinfo  tsconfig.spec.json  (+2 more)
(+2222 files in other folders)
